--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.googlecode.json-simple:json-simple:1.1'
+    compile 'com.google.code.gson:gson:2.2.+'
     testCompile 'junit:junit:4.12'
 }
