--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,6 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.googlecode.json-simple:json-simple:1.1'
-    compile 'com.google.code.gson:gson:2.2.+'
+    compile 'com.google.code.gson:gson:2.2.4'
     testCompile 'junit:junit:4.12'
 }
